@@ -15,26 +15,26 @@
 #    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 
-"""
-Tofu started out its life as a complete test framework. Tofu has since
-been rewritten as independently usable test utilities, some of which
-are integrated to work as a plugin with `nosetests
-<http://nose.readthedocs.org>`_.
+"""Tofu is a collection of test utilities, some of which are
+integrated to work as a plugin with `pytest
+<http://docs.pytest.org>`_.
 
-The defining feature of Tofu is its ability to let you write
-a hierarchy of test fixtures that is *completely* decoupled from your
-hierarchy of tests or test suites.
+The main feature of Tofu is its ability to let you write a hierarchy
+of test :py:class:`Fixture` classes, each of which contains a
+collection of related objects used in a test.
 
 Tofu also gobbled up another little test project, called `tut` which
 implemented a few utilities for testing exceptions, dealing with
 temporary files, etc. All this functionality is now also part of Tofu.
+
 """
 from __future__ import print_function, unicode_literals, absolute_import, division
 
-from reahl.tofu.fixture import Fixture, uses, scope
+from reahl.tofu.fixture import Fixture
 from reahl.tofu.fixture import Scenario as scenario
 from reahl.tofu.fixture import SetUp as set_up
 from reahl.tofu.fixture import TearDown as tear_down
+from reahl.tofu.pytestsupport import uses, scope, with_fixtures
 
 from .checks import *
 from .files import *
