@@ -15,6 +15,7 @@ python-reahl (4.0.0a1) unstable; urgency=low
  * Upgraded dependency on wheel.
  * Upgraded dependency on setuptools.
  * Added workaround for https://github.com/pypa/setuptools/issues/97.
+ * Changed Fixtures extensively to work with pytest instead of nosetests (in response to #71).
 
  -- Iwan Vosloo <iwan@reahl.org>  Thu, 12 Jun 2016 08:47:00 +0200
 
